codepkg/objects/Exchange_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To highlight active exchange rate currency</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Capex_Rate__c</fullName>
        <label>Budget Capex Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExRate_to_Euro__c</fullName>
        <label>ExRate to Euro</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExRate_to_USD__c</fullName>
        <label>ExRate to USD</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ex_Rate_Type__c</fullName>
        <label>Ex-Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Capex</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Online Ordering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foreign_Currency__c</fullName>
        <label>Local Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <label>Local Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED - United Arab Emirates Dirham</fullName>
                </value>
                <value>
                    <fullName>AFN - Afghanistan Afghani</fullName>
                </value>
                <value>
                    <fullName>ALL - Albania Lek</fullName>
                </value>
                <value>
                    <fullName>AMD - Armenia Dram</fullName>
                </value>
                <value>
                    <fullName>ANG - Netherlands Antilles Guilder</fullName>
                </value>
                <value>
                    <fullName>AOA - Angola Kwanza</fullName>
                </value>
                <value>
                    <fullName>ARS - Argentina Peso</fullName>
                </value>
                <value>
                    <fullName>AUD - Australia Dollar</fullName>
                </value>
                <value>
                    <fullName>AWG - Aruba Guilder</fullName>
                </value>
                <value>
                    <fullName>AZN - Azerbaijan New Manat</fullName>
                </value>
                <value>
                    <fullName>BAM - Bosnia and Herzegovina Convertible Marka</fullName>
                </value>
                <value>
                    <fullName>BBD - Barbados Dollar</fullName>
                </value>
                <value>
                    <fullName>BDT - Bangladesh Taka</fullName>
                </value>
                <value>
                    <fullName>BGN - Bulgaria Lev</fullName>
                </value>
                <value>
                    <fullName>BHD - Bahrain Dinar</fullName>
                </value>
                <value>
                    <fullName>BIF - Burundi Franc</fullName>
                </value>
                <value>
                    <fullName>BMD - Bermuda Dollar</fullName>
                </value>
                <value>
                    <fullName>BND - Brunei Darussalam Dollar</fullName>
                </value>
                <value>
                    <fullName>BOB - Bolivia Boliviano</fullName>
                </value>
                <value>
                    <fullName>BRL - Brazil Real</fullName>
                </value>
                <value>
                    <fullName>BSD - Bahamas Dollar</fullName>
                </value>
                <value>
                    <fullName>BTN - Bhutan Ngultrum</fullName>
                </value>
                <value>
                    <fullName>BWP - Botswana Pula</fullName>
                </value>
                <value>
                    <fullName>BYR - Belarus Ruble</fullName>
                </value>
                <value>
                    <fullName>BZD - Belize Dollar</fullName>
                </value>
                <value>
                    <fullName>CAD - Canada Dollar</fullName>
                </value>
                <value>
                    <fullName>CDF - Congo/Kinshasa Franc</fullName>
                </value>
                <value>
                    <fullName>CHF - Switzerland Franc</fullName>
                </value>
                <value>
                    <fullName>CLP - Chile Peso</fullName>
                </value>
                <value>
                    <fullName>CNY - China Yuan Renminbi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Online_Enquiry_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Enquiry Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requested_Currency__c</fullName>
        <label>Requested Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED - United Arab Emirates Dirham</fullName>
                </value>
                <value>
                    <fullName>AFN - Afghanistan Afghani</fullName>
                </value>
                <value>
                    <fullName>ALL - Albania Lek</fullName>
                </value>
                <value>
                    <fullName>AMD - Armenia Dram</fullName>
                </value>
                <value>
                    <fullName>ANG - Netherlands Antilles Guilder</fullName>
                </value>
                <value>
                    <fullName>AOA - Angola Kwanza</fullName>
                </value>
                <value>
                    <fullName>ARS - Argentina Peso</fullName>
                </value>
                <value>
                    <fullName>AUD - Australia Dollar</fullName>
                </value>
                <value>
                    <fullName>AWG - Aruba Guilder</fullName>
                </value>
                <value>
                    <fullName>AZN - Azerbaijan New Manat</fullName>
                </value>
                <value>
                    <fullName>BAM - Bosnia and Herzegovina Convertible Marka</fullName>
                </value>
                <value>
                    <fullName>BBD - Barbados Dollar</fullName>
                </value>
                <value>
                    <fullName>BDT - Bangladesh Taka</fullName>
                </value>
                <value>
                    <fullName>BGN - Bulgaria Lev</fullName>
                </value>
                <value>
                    <fullName>BHD - Bahrain Dinar</fullName>
                </value>
                <value>
                    <fullName>BIF - Burundi Franc</fullName>
                </value>
                <value>
                    <fullName>BMD - Bermuda Dollar</fullName>
                </value>
                <value>
                    <fullName>BND - Brunei Darussalam Dollar</fullName>
                </value>
                <value>
                    <fullName>BOB - Bolivia Boliviano</fullName>
                </value>
                <value>
                    <fullName>BRL - Brazil Real</fullName>
                </value>
                <value>
                    <fullName>BSD - Bahamas Dollar</fullName>
                </value>
                <value>
                    <fullName>BTN - Bhutan Ngultrum</fullName>
                </value>
                <value>
                    <fullName>BWP - Botswana Pula</fullName>
                </value>
                <value>
                    <fullName>BYR - Belarus Ruble</fullName>
                </value>
                <value>
                    <fullName>BZD - Belize Dollar</fullName>
                </value>
                <value>
                    <fullName>CAD - Canada Dollar</fullName>
                </value>
                <value>
                    <fullName>CDF - Congo/Kinshasa Franc</fullName>
                </value>
                <value>
                    <fullName>CHF - Switzerland Franc</fullName>
                </value>
                <value>
                    <fullName>CLP - Chile Peso</fullName>
                </value>
                <value>
                    <fullName>CNY - China Yuan Renminbi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2016_Budget_Capex_Rate__c</fullName>
        <label>2016 Budget Capex Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Exchange Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_USD__c</columns>
        <columns>X2016_Budget_Capex_Rate__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HKD_Exchange_Rate</fullName>
        <columns>NAME</columns>
        <columns>Local_Currency__c</columns>
        <columns>Requested_Currency__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>ExRate_to_USD__c</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>Online_Enquiry_Rate__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Local_Currency__c</field>
            <operation>equals</operation>
            <value>HKD - Hong Kong Dollar</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>HKD Exchange Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ivy</fullName>
        <columns>NAME</columns>
        <columns>Local_Currency__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>ExRate_to_USD__c</columns>
        <columns>Month__c</columns>
        <columns>Active__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2020,2019</value>
        </filters>
        <filters>
            <field>Ex_Rate_Type__c</field>
            <operation>equals</operation>
            <value>Budget Capex</value>
        </filters>
        <label>___Search</label>
    </listViews>
    <listViews>
        <fullName>Online_Enquiry_Rate</fullName>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Requested_Currency__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>ExRate_to_USD__c</columns>
        <columns>Online_Enquiry_Rate__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Online_Enquiry_Rate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>Online Enquiry Rate</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2015_Budget_Capex_Rate</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_2015</value>
        </filters>
        <label>2015 Budget Capex Rate</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2016_Budget_Capex_Rate</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_2016</value>
        </filters>
        <label>2016 Budget Capex Rate</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_Budget_Capex_Rate</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_2017</value>
        </filters>
        <label>2017 Budget Capex Rate</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2018_Budget_Capex_Rate</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_2018</value>
        </filters>
        <label>2018 Budget Capex Rate</label>
    </listViews>
    <listViews>
        <fullName>X2020_Budget_Capex_Rate</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Local_Currency__c</columns>
        <columns>Budget_Capex_Rate__c</columns>
        <columns>ExRate_to_Euro__c</columns>
        <columns>ExRate_to_USD__c</columns>
        <columns>Ex_Rate_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2020</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>_2020</value>
        </filters>
        <label>2020 Budget Capex Rate</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Exchange Rate ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>